My_Projects/Twitter_Clone/twitter-clone/src/App.scss
section,div,p,img,ul,ol,li{
  margin:0;
  padding:0;
}

#App {
  display: flex;
  height:100vh;
  overflow-x: hidden;
  overflow-y: hidden;
  background-color: white;
  align-items: center;
  font-size: calc(10px + 2vmin);
  color: black;
  section{
    height:100%;
  };
  #left-container{
    border:dotted green;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: end;
    border-right:solid 0.01rem grey;
    flex:0 0 33.33%;
    font-family: 'Arimo', sans-serif;
    font-size:1.5rem;
    nav{
      display: flex;
      flex-direction: column;
      align-items: start;
      width: 45%; 
      ul{
        list-style: none;
        //list-style-image:url("birdhouse.png");
        img{
          width: 0.5rem;
          height: 0.5rem;
        }
        #twitter-logo{
          width:4rem;
          border-radius: 75%;
          margin-left: -1.2rem;
          margin-top:0.5rem;
          margin-bottom: 1rem;
          
        }
        li{
          margin-bottom: 1rem;
        }
        button{
          border-width: 0;
          font-weight: bold;
          font-size: 1.1rem;
          border-radius:3rem;
          width:14rem;
          height:3.3rem;
          color:white;
          background-color: #1d9bf0;
         
        }
      } 
      //must add hover effect
    }
    #profile-pill-container{
      width: 45%;
      display: flex;
      justify-content: start;
      padding-bottom: 1rem;
    }
    #profile-pill{
      display: flex;
      justify-content:space-between;
      align-items: center;
      justify-self: start;
      padding:0.5rem 1rem 0.5rem 1rem;
      width: 14rem;
      height: 3.6rem;
      border-radius: 3.6rem;
      font-size: 1rem;
      overflow: hidden;
      img{
        width:3rem;  
        height:3rem;
        border-radius: 50%;
      }
    }
    #profile-pill:hover{
      background-color: rgba(220,220,220,255);
    }
  
  };
  #middle-container{
  
    flex:0 0 33.33%;
    overflow-y: scroll;

    #timeline-div{
      height: 8rem; 
      .twitter-timeline{
        margin-top:-2rem;
        position: absolute;
      }
    }
  
  };
  #right-container{
    display: flex;  
    flex-direction: column;
    gap: 1rem;
    padding-left: 2rem;
    border-left:solid 0.05rem grey;
    flex:0 0 33.33%;
    input{
      background-color: rgba(239,243,244,255);
      border-width: 0;
      border-radius:3rem;
      width: 50%;
      height:2.5rem;
    }
      ::placeholder{
        padding-left: 2rem;
      }

    #trending-section{
      display: flex;
      justify-content: initial;
      flex-direction: column;
      width:50%;
      height: 24rem;
      background-color: rgba(239,243,244,255);
      border-radius: 5%;
      overflow: hidden;
      margin-top: 4rem;
      
      .cards-header{
        display: flex;
        font-size: 1.3rem;
        font-weight: bold;
        padding-left:1rem;
        flex:0 0 14%;
        align-items: center;
      }
      .cards{
        padding-left: 1rem;
        
        flex:0 0 18%;
      }
      .cards:hover{
        background-color: rgba(220,220,220,255);
      }
      .cards-footer{
        display:flex;
        align-items: center;
        flex:0 0 14%;
        font-size: 1rem;
        padding-left: 1rem;
        a{
        text-decoration: none;
        color:#53b3f2;
        }
      }
      .cards-footer:hover{
        background-color: rgba(220,220,220,255);
        
      }
      
    }

    #rec-follows-section{
      display: flex;
      justify-content: initial;
      flex-direction: column;
      width:50%;
      height: 19.92rem;
      background-color: rgba(239,243,244,255);
      border-radius: 5%;
      overflow: hidden;

      .cards-header{
        display: flex;
        font-size: 1.3rem;
        font-weight: bold;
        padding-left:1rem;
        flex:0 0 17%;
        align-items: center;
      }
      .cards{
        padding-left: 1rem;
        
        flex:0 0 22%;
      }
      .cards:hover{
        background-color: rgba(220,220,220,255);
      }
      .cards-footer{
        display:flex;
        align-items: center;
        flex:0 0 17%;
        font-size: 1rem;
        padding-left: 1rem;
        a{
        text-decoration: none;
        color:rgba(48,164,241,255);
        }
      }
      .cards-footer:hover{
        background-color: rgba(220,220,220,255);
        
      }
    }

   
  };
}






/*.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}*/

